# kindled

./: .env.example  .gitignore  .replit  .vercelignore  README.md  app.zon  build.zig  build.zig.zon  index.html  oxlint.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
docs/plans/: 2026-04-22-001-feat-hosted-sync-supabase-turso-plan.md
native/: main.zig  runner.zig
public/: llms.txt  manifest.json  sw.js
public/data/: canonical-topics.json
scripts/: quote-arrow-attrs.mjs  split-bsb.mjs
src/: App.tsx  haptics.test.ts  haptics.ts  index.css  main.ts  zero-native.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  share.rs  sound.rs
src/app/: app-model.ts  app-screen.test.ts  app-screen.ts  mount-app.ts  mount-app.tsx  render-root.ts  render-root.tsx
src/auth/: session-store.ts  supabase-client.ts
src/capture/: NoteCapture.module.css  NoteCapture.tsx  ScriptureCapture.module.css  ScriptureCapture.tsx  note-capture-db.ts  note-capture-view.ts  note-capture-view.tsx  note-capture-wiki.test.ts  note-capture-wiki.ts  scripture-capture-helpers.test.ts  scripture-capture-helpers.ts  scripture-capture-view.ts  scripture-capture-view.tsx  wikiLinkAutocomplete.test.ts  wikiLinkAutocomplete.ts
src/db/: blocks.ts  connection.ts  entities.ts  export.ts  index.ts  links.ts  reflections.test.ts  reflections.ts  ritual.ts  schema.ts  tombstones.ts  types.ts
supabase/: config.toml
(+164 files in other folders)
