[package]
name = "kindled"
version = "0.1.0"
description = "Kindled companion app shell"
authors = ["dps"]
edition = "2021"
repository = "https://github.com/dpshde/kindled"

[lib]
name = "kindled_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde_json = "1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "^2.3.2"
objc = "0.2"
dispatch = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-haptics = "1"
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"
